fix: shifting due to the scrollbar disappearing

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import "globals-calendar.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -14,4 +16,6 @@
   }
 }
 
-@import "globals-calendar.css";
+body {
+  overflow-y: scroll
+}
